--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./dist/main.css" />
     <script src="./dist/main.js"></script>
-    <title>Project Name</title>
+    <title>Visor</title>
   </head>
 
   <body>
+    <div class="stock-search-bar">
+        <input id="stock-input" type="text" placeholder="Enter a symbol">
+        <ul id="stock-list"></ul>
+    </div> 
   </body>
 
 </html>
