--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./dist/main.css" />
+    <link rel="stylesheet" href="./src/main.css" />
     <script src="./dist/main.js"></script>
     <title>Visor</title>
   </head>
 
   <body>
-    <div class="stock-search-bar">
-        <input id="stock-input" type="text" placeholder="Enter a symbol">
-        <ul id="stock-list"></ul>
-    </div> 
+    <div class="wrapper">
+        <div class="stock-search-bar">
+            <input id="stock-input" type="text" placeholder="Enter a symbol">
+            <div class="stock-options">
+                <ul id="stock-list"></ul>
+            </div>
+        </div> 
+    </div>
   </body>
 
 </html>
