returns all values of api within timeframe with the exception of graphing

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./src/main.css" />
-    <script src="./dist/main.js"></script>
+    <script src="./dist/main.js" defer></script>
     <title>Visor</title>
   </head>
 
@@ -18,6 +18,10 @@
             </div>
         </div> 
     </div>
+    <div>
+        <canvas id="stock-chart"></canvas>
+      </div>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
   </body>
 
 </html>
