working graph without format

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./src/main.css" />
     <script src="./dist/main.js" defer></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.3.0/chart.min.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.3.0/chart.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.3.0/chart.cjs.map"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.3.0/chart.js.map"></script> -->
+    <!-- <script src=""></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.3.0/chart.umd.js"></script>
+    
     <title>Visor</title>
   </head>
 
@@ -18,10 +25,10 @@
             </div>
         </div> 
     </div>
-    <div>
+    <div id="graph">
         <canvas id="stock-chart"></canvas>
-      </div>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
+    </div>
+    
   </body>
 
 </html>
