added handle click func and remove list and search after click, made graph display only after click

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </div> 
     </div>
-    <div id="graph">
+    <div id="graph" style="display: none">
         <canvas id="stock-chart"></canvas>
     </div>
     
