--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
   </head>
 
   <body>
-    <header>
+   <div class="header">
 
-    </header>
-    
+   </div>
     <div class="search-wrapper">
         <div class="stock-search-bar">
             <input id="stock-input" type="text" placeholder="Enter a symbol">
@@ -26,7 +25,7 @@
     </div>
     
     <div class="graph-container">
-        <button id="timeFrameButton" value="true">4-Week</button>
+        <button id="timeFrameButton" style="display: none">4-Week</button>
         <div id="graph" style="display: none">
             <canvas id="stock-chart"></canvas>
         </div>
