--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
     
     <div class="graph-container">
         <!-- <button id="timeFrameButton" style="display: none">4-Week</button> -->
-        <button class="timeFrameButton" id="1-Week-button" value="1-Week">1-Week</button>
-        <button class="timeFrameButton" id="4-Week-button" value="4-Week">4-Week</button>
-        <button class="timeFrameButton" id="3-Month-button" value="3-Month">3-Month</button>
-        <button class="timeFrameButton" id="6-Month-button" value="6-Month">6-Month</button>
-        <button class="timeFrameButton" id="1-Year-button" value="1-Year">1-Year</button>
-
+        <div class="button-container">
+            <button class="timeFrameButton" id="1-Week-button" value="1-Week">1-Week</button>
+            <button class="timeFrameButton" id="4-Week-button" value="4-Week">4-Week</button>
+            <button class="timeFrameButton" id="3-Month-button" value="3-Month">3-Month</button>
+            <button class="timeFrameButton" id="6-Month-button" value="6-Month">6-Month</button>
+            <button class="timeFrameButton" id="1-Year-button" value="1-Year">1-Year</button>
+        </div>
+        
         <div id="graph" style="display: none">
             <canvas id="stock-chart"></canvas>
         </div>
