css done attempting to adjust grpah title

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
     <div class="graph-container">
         <!-- <button id="timeFrameButton" style="display: none">4-Week</button> -->
         <div class="button-container">
-            <button class="timeFrameButton" id="1-Week-button" value="1-Week">1-Week</button>
-            <button class="timeFrameButton" id="4-Week-button" value="4-Week">4-Week</button>
-            <button class="timeFrameButton" id="3-Month-button" value="3-Month">3-Month</button>
-            <button class="timeFrameButton" id="6-Month-button" value="6-Month">6-Month</button>
-            <button class="timeFrameButton" id="1-Year-button" value="1-Year">1-Year</button>
+            <button class="timeFrameButton" id="1-Week-button" value="1-Week">1W</button>
+            <button class="timeFrameButton" id="4-Week-button" value="4-Week">1M</button>
+            <button class="timeFrameButton" id="3-Month-button" value="3-Month">3M</button>
+            <button class="timeFrameButton" id="6-Month-button" value="6-Month">6M</button>
+            <button class="timeFrameButton" id="1-Year-button" value="1-Year">YTD</button>
+            <button class="timeFrameButton" id="5-Years-button" value="5-Years">5Y</button>
         </div>
         
         <div id="graph" style="display: none">
