Update index.html (png to PNG)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="container">
-        <img src="memeGuy.png" alt="My Image">
+        <img src="memeGuy.PNG" alt="My Image">
         <div class="box">
             <p>
                 Welcome to, VISOR. Visualize your favorite stocks from a fun perspective.
