beginning display css changed

--- a/index.html
+++ b/index.html
@@ -10,15 +10,33 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>Visor</title>
   </head>
+  
+  <header>
+
+      <!-- <img src="memeGuy.PNG" alt="Logo" class="logo"> -->
+      <h1 class="company-name">VISOR</h1>
+
+    <!-- <div> -->
+        <p>Notice to User</p>
+    <!-- </div> -->
+</header>
 
   <body>
-    <div class="curtain">
+    <!-- <div class="curtain">
         <div class="left-side"></div>
         <div class="right-side"></div>
+    </div> -->
+    <div class="search-wrapper">
+        <div class="stock-search-bar">
+            <input id="stock-input" type="text" placeholder="Enter a symbol">
+            <div class="stock-options">
+                <ul id="stock-list"></ul>
+            </div>
+        </div> 
     </div>
-
+    
     <div class="container">
-        <img src="memeGuy.png" alt="My Image">
+        <!-- <img src="memeGuy.PNG" alt="My Image"> -->
         <div class="box">
             <p>
                 Welcome to, VISOR. Visualize your favorite stocks from a fun perspective.
@@ -32,21 +50,6 @@
     </div>
 
 
-    <header>
-        <div class="logo-container">
-          <img src="memeGuy.PNG" alt="Logo" class="logo">
-          <h1 class="company-name">VISOR</h1>
-        </div>
-    </header>
-
-    <div class="search-wrapper">
-        <div class="stock-search-bar">
-            <input id="stock-input" type="text" placeholder="Enter a symbol">
-            <div class="stock-options">
-                <ul id="stock-list"></ul>
-            </div>
-        </div> 
-    </div>
 
     <!-- <div id="article-container">
 
