--- a/index.html
+++ b/index.html
@@ -16,9 +16,22 @@
     <!-- <img src="memeGuy.PNG" alt="Logo" class="logo"> -->
     <h1 class="company-name">VISOR</h1>
 
-    <!-- <div> -->
-    <p>Notice to User</p>
-    <!-- </div> -->
+    <p id="notice-to-user">Notice to User</p>
+    <div id="modal-container" style="display: none">
+        <div id="modal-overlay">
+            <div id="modal-content">
+                <!-- Modal content goes here -->
+                - Due to the limited number of API calls,
+                there will be a maximum of 5 searches per
+                minute. <br>
+                <br>
+                - Data is based on the daily close <br>
+                <br>
+                - Data is unaccounted for any stock splits <br>
+            </div>
+        </div>
+    </div>
+
 </header>
 
 <body>
@@ -26,7 +39,7 @@
         <div class="left-side"></div>
         <div class="right-side"></div>
     </div> -->
-    <div class="search-wrapper">
+    <div class="search-wrapper" id="search-wrapper">
         <div class="stock-search-bar">
             <input id="stock-input" type="text" placeholder="Enter a symbol">
             <div class="stock-options">
@@ -54,27 +67,27 @@
     <!-- <div id="article-container">
 
     </div> -->
-    <div id="main-body-container" style="display: none">
+    <!-- <div id="main-body-container" style="display: none">
         <div id="main-body-left">
             Beta Calculation according to timeframe
+        </div> -->
+    <div class="graph-container">
+        <!-- <button id="timeFrameButton" style="display: none">4-Week</button> -->
+        <div class="button-container">
+            <button class="timeFrameButton" id="1-Week-button" value="1-Week">1W</button>
+            <button class="timeFrameButton" id="4-Week-button" value="4-Week">1M</button>
+            <button class="timeFrameButton" id="3-Month-button" value="3-Month">3M</button>
+            <button class="timeFrameButton" id="6-Month-button" value="6-Month">6M</button>
+            <button class="timeFrameButton" id="1-Year-button" value="1-Year">YTD</button>
+            <button class="timeFrameButton" id="5-Years-button" value="5-Years">5Y</button>
         </div>
-        <div class="graph-container">
-            <!-- <button id="timeFrameButton" style="display: none">4-Week</button> -->
-            <div class="button-container">
-                <button class="timeFrameButton" id="1-Week-button" value="1-Week">1W</button>
-                <button class="timeFrameButton" id="4-Week-button" value="4-Week">1M</button>
-                <button class="timeFrameButton" id="3-Month-button" value="3-Month">3M</button>
-                <button class="timeFrameButton" id="6-Month-button" value="6-Month">6M</button>
-                <button class="timeFrameButton" id="1-Year-button" value="1-Year">YTD</button>
-                <button class="timeFrameButton" id="5-Years-button" value="5-Years">5Y</button>
-            </div>
 
-            <!-- <div id="graph" style="display: none"> -->
-            <div id="graph">
-                <canvas id="stock-chart"></canvas>
-            </div>
+        <div id="graph" style="display: none">
+            <!-- <div id="graph"> -->
+            <canvas id="stock-chart"></canvas>
         </div>
     </div>
+    <!-- </div> -->
 
 </body>
 
